test/pass/classes/class_method_by_self.lly
class Point(x: integer, y: integer) {
    define test( => integer) { return 10 }
    var @z = self.test()
}
